syntax = "proto3";

option java_multiple_files = true;
option java_package = "ppr.ru.integrationservice.grpc.generated";
option java_outer_classname = "CustomerProto";

package customer;

// Customer Service for MongoDB-backed customers
service CustomerService {
    // Query operations
    rpc GetCustomers(GetCustomersRequest) returns (GetCustomersResponse);
    rpc GetCustomerById(GetCustomerByIdRequest) returns (CustomerResponse);
    rpc GetCustomerByEmail(GetCustomerByEmailRequest) returns (CustomerResponse);

    // Mutation operations
    rpc CreateCustomer(CreateCustomerRequest) returns (CustomerResponse);
    rpc UpdateCustomer(UpdateCustomerRequest) returns (CustomerResponse);
    rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse);
}

// ==================== Query Requests ====================

message GetCustomersRequest {
    // Empty request to get all customers
}

message GetCustomerByIdRequest {
    string id = 1;
}

message GetCustomerByEmailRequest {
    string email = 1;
}

// ==================== Mutation Requests ====================

message CreateCustomerRequest {
    string name = 1;
    string email = 2;
    string phone = 3;
    Address address = 4;
}

message UpdateCustomerRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    Address address = 5;
}

message DeleteCustomerRequest {
    string id = 1;
}

// ==================== Responses ====================

message GetCustomersResponse {
    repeated Customer customers = 1;
}

message CustomerResponse {
    Customer customer = 1;
    bool found = 2;
}

message DeleteCustomerResponse {
    bool success = 1;
}

// ==================== Domain Messages ====================

message Customer {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    Address address = 5;
}

message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string zip_code = 4;
    string country = 5;
}
